# satoridb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs  changes.md  indexer.rs
.github/workflows/: e2e_tests.yml  integration_tests.yml  lint.yml  regression_tests.yml  unit_tests.yml
docs/: architecture.md
examples/: README.md  api_tour.rs  embedded_async.rs  embedded_basic.rs
src/: bucket_index.rs  bucket_locks.rs  bvecs.rs  embedded.rs  executor.rs  flatbin.rs  fvecs.rs  gnd.rs  indexer.rs  ingest_counter.rs  lib.rs  main.rs  net.rs  quantizer.rs  rebalancer.rs  rng.rs  router.rs  router_hnsw.rs  router_manager.rs  s3_reader.rs  service.rs  storage.rs  tasks.rs  vector_index.rs  wal.rs  worker.rs
src/rebalancer/: tests.rs
src/storage/: docs_compressed.txt
src/storage/wal/: block.rs  config.rs  io.rs  mod.rs  paths.rs  storage.rs
src/storage/wal/runtime/: allocator.rs  background.rs  index.rs  reader.rs  topic_clean.rs  walrus.rs  walrus_read.rs  walrus_write.rs  writer.rs
tests/: chaos_rebalance_integration.rs  dataset_readers_integration.rs  embedded_lifecycle.rs  embedded_smoke.rs  end_to_end_pipeline.rs  example_api_tour.rs  example_embedded_async.rs  example_embedded_basic.rs  executor_concurrency_integration.rs  executor_multibucket_integration.rs  executor_routing_integration.rs  extreme_stress.rs  fetch_vectors.rs  query_with_vectors.rs  reactor_stall_test.rs  rebalance_concurrency_integration.rs  rebalance_config_integration.rs  rebalance_delete_integration.rs  rebalance_executor_integration.rs  rebalance_integration.rs  rebalance_resilience_integration.rs  restart_routing_persistence.rs  router_load_integration.rs  serial_tests.rs  storage_invariants.rs  worker_cache_integration.rs  worker_end_to_end.rs
vector_index/: 000012.sst  IDENTITY  LOG  LOG.old.1766291536491972  LOG.old.1766291536491994  LOG.old.1766291555746674  LOG.old.1766291555747152  LOG.old.1766291555747377  LOG.old.1766291555747682  LOG.old.1766291555748001  LOG.old.1766291622039388  LOG.old.1766291622039475  LOG.old.1766291622039529  LOG.old.1766291622039553  LOG.old.1766291622039624  MANIFEST-000014  OPTIONS-000011
