[package]
name = "satoridb"
version = "0.1.0"
edition = "2021"

[dependencies]
glommio = "0.8"
rkyv = { version = "0.7", features = ["validation"] }
hnsw_rs = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
async-channel = "2.3"
lru = "0.12"