[package]
name = "satoridb"
version = "0.1.0"
edition = "2021"

[dependencies]
glommio = "0.8"
rkyv = { version = "0.7", features = ["validation"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-lite = "1.13"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
async-channel = "2.3"
lru = "0.12"
flate2 = "1.0"
tar = "0.4"
rayon = "1.7"
uuid = { version = "1.0", features = ["v4"] }
glob = "0.3"
crossbeam-channel = "0.5"
num_cpus = "1.16"
io-uring = "0.6"
tracing = "0.1"
memmap2 = "0.9"
rkyv_derive = "0.7"
libc = "0.2"
parking_lot = "0.12"
smallvec = "1.13"

[dev-dependencies]
tempfile = "3.10"
