[package]
name = "satoridb"
version = "0.1.0"
edition = "2021"
description = "Embedded vector database for approximate nearest neighbor search (experimental)."
readme = "README.md"
repository = "https://github.com/satoridb/satoridb"
homepage = "https://github.com/satoridb/satoridb"
documentation = "https://docs.rs/satoridb"
license = "MIT"
keywords = ["vector", "ann", "hnsw", "embedding", "database"]
categories = ["database", "algorithms", "data-structures"]
exclude = [
    "target/**",
    "wal_files/**",
    ".github/**",
    "**/*.bin",
    "**/*.bvecs",
    "**/*.fvecs",
    "**/*.f32bin",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
path = "src/lib.rs"

[dependencies]
glommio = "0.8"
rkyv = { version = "0.7", features = ["validation"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
async-channel = "2.3"
flate2 = "1.0"
tar = "0.4"
crossbeam-channel = "0.5"
num_cpus = "1.16"
io-uring = "0.6"
memmap2 = "0.9"
rkyv_derive = "0.7"
libc = "0.2"
parking_lot = "0.12"
smallvec = "1.13"
thread_local = "1.1"
async-trait = "0.1.89"
env_logger = "0.11.8"
tempfile = "3.10"

[profile.release]
debug = true
